eks/deployment-blackjack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackjack
  namespace: blackjack # the namespace that sperate the pods  between envroments.
spec:
  selector:
    matchLabels:
      app: blackjack
  replicas: 2 # the pods will be created and runing.
  template:
    metadata:
      labels:
        app: blackjack
    spec:
      containers:
      - name: blackjack
        image: shlomobarzili/blackjack:10874055185  # the immage 
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80 # the port svc that expose
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
