eks/blackjack-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackjack
  namespace: blackjack # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: blackjack
  type: LoadBalancer # the type of the service
  ports:
    - protocol: TCP
      port: 80   # the port svc that expose
      targetPort: 80 # the port of the pod
