eks/service-blackjack.yml
apiVersion: v1
kind: Service
metadata:
  name: blackjack
  namespace: blackjack
spec:
  selector:
    app: blackjack
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
