eks/ingress.yml
# for working with alb type application you need to install helm and install the ingress controller aws.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackjack
  namespace: blackjack # the namespace that sperate the pods  between envroments.
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # the alb move the traffic directly to pods
    alb.ingress.kubernetes.io/security-groups: sg-0557e93639346c735
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/f86f25a3-ee12-4da6-a887-34ec263a6696 # the acm certificate arn
    alb.ingress.kubernetes.io/subnets: subnet-03b7311f709420e15,subnet-03ba318775adc7dfd # Public subnetbs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]' # listen ports
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
  #  alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/blackjack-waf/568de2c9-9afb-4e12-b500-1da3eb558698

spec:
  ingressClassName: alb
  rules:
    - host: blackjack.spider-shlomo.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect # the name of the service
                port:
                  name: use-annotation # use the annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blackjack
                port:
                  number: 80
